--- a/test/meson.build
+++ b/test/meson.build
@@ -19,6 +19,4 @@ cmock_gen_mock = generator(
    arguments: ['@INPUT@', '@BUILD_DIR@'],
 )
 
-subdir('test_gardener.d')
-subdir('test_cmock.d')
-subdir('test_main.d')
+subdir('test_ar_list.d')
