add tests for arl_grow_array_capacity

--- a/src/utils/meson.build
+++ b/src/utils/meson.build
@@ -1,3 +1,4 @@
 sources += files(
-   'std_lib_utils.c', 'std_lib_utils.h'
+  'std_lib_utils.c', 'std_lib_utils.h',
+  'overflow_utils.c', 'overflow_utils.h',
 )
