--- a/test/test_ar_list.d/meson.build
+++ b/test/test_ar_list.d/meson.build
@@ -9,7 +9,8 @@ test_name = 'test_ar_list_logic.c'
 cmock_test_src = files([
   test_name,
   src / 'ar_list.h', src / 'ar_list.c',
-  test_utils / 'test_utils.h', test_utils / 'test_utils.c'
+  utils / 'overflow_utils.h', utils / 'overflow_utils.c',
+  test_utils / 'test_utils.h', test_utils / 'test_utils.c',
 ])
 
 test_ar_list_exe = executable('test_ar_list_logic',
