--- a/test/test_ar_list.d/meson.build
+++ b/test/test_ar_list.d/meson.build
@@ -2,7 +2,6 @@ root = join_paths('..', '..')
 src = join_paths(root, 'src')
 utils = join_paths(src, 'utils')
 interfaces = join_paths(src, 'interfaces')
-test_utils = join_paths('..', 'utils')
 
 test_file_name = 'test_ar_list_logic.c'
 test_name = 'test_ar_list_logic'
@@ -21,7 +20,7 @@ test_ar_list_exe = executable(test_name,
    cmock_gen_runner.process(test_file_name),
    cmock_gen_mock.process( interfaces / 'std_lib_interface.h')
   ],
-  include_directories: [src, utils, interfaces, test_utils],
+  include_directories: [src, utils, interfaces],
   dependencies: [unity_dependency, cmock_dependency],
   link_args: [
     # allow static functions testing
