Add array list (#1)
* init array list

* add std_lib_utils

* add mocked test

* test ar_list_init

* test static functions

* add test utils

* add tests for arl_grow_array_capacity

* add test_overflow_utils.c

* add l_error_t

* save progress

* add overflow tests

* add errors tests

* delete l_limits.h, move its content to l_def.h

* add arg validation

* add capacity overflow tests

* refactor count_new_capacity

* add list upper boundary

* rename L_CAPACITY_MAX to ARL_CAPACITY_MAX

* add tests to grow_array_capacity

* add test for arl_get

* add arl_get's tests

* Update README.md

* refactor creation interface

* add tests for arl_create

* add arl_set and tests

* add tests for count_new_capacity and is_i_too_big

* add grow_array_capacity

* replace realloc with malloc&memcpy

* bug found :)

* fix the bug

* add arl_move_indexes_by_positive_number

* distinguish utils from interfaces

* add pointers utils

* add copy_pointers (i know name is terrible xd)

* add comments

* improve test

* small changes

* refactor pinters utils test setUp

* fix tests setup

* fix memory leaks in pointers utils tests

* add tests

* save progress, before simplifying setUp

* refactor test

* integrate pointers_utils

* refactor tests xd

* add unit-test

* add to dos

* add insert to arl

* rename functions

* add moving array left

* save work

* refactor pointer's utils tests

* save progress

* save working test scenario for move_pointers_left

* save working solution without overflow/underflow validations

* fix bugs

* refactor solution

* save tested solution

* add tests for move array left

* add test

* save progress before adding pop to headers

* how to delete last element using move elements left?

* save working deletion

* add to-do

* add test for delete all

* add more tests

* improve errors

* add remove to array list


--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -1,16 +1,12 @@
 name: Unit Tests
 run-name: ${{ github.actor }} is testing the app for ${{ github.ref }}
 on:
-  push:
-    branches:
-      - "main"
   pull_request:
-    branches:
-      - "main"
+    branches: '**'
 env:
   BUILD_DIR: build
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Copy Project
