--- a/.github/workflows/unit-tests-with-valgrind.yaml
+++ b/.github/workflows/unit-tests-with-valgrind.yaml
@@ -1,14 +1,14 @@
-name: Unit Tests
-run-name: ${{ github.actor }} is testing the app for ${{ github.ref }}
+name: Unit Tests with Valgrind
+run-name: ${{ github.actor }} is testing with valgrind the app for ${{ github.ref }}
 on:
   pull_request:
     branches: '**'
 env:
   BUILD_DIR: build
 jobs:
-  test:
+  valgrind-test:
     runs-on: ubuntu-latest
-    steps:    
+    steps:
       - name: Wait for build to succeed
         uses: lewagon/wait-on-check-action@v1.3.1
         with:
@@ -18,9 +18,11 @@ jobs:
           running-workflow-name: 'Build'
       - name: Copy Project
         uses: actions/checkout@v3
+      - name: Install valgrind
+        run: sudo apt-get install valgrind -y
       - name: Install meson
         run: ./scripts/install_meson.sh
       - name: Setup build dir
         run: ./scripts/setup_build.sh
       - name: Run tests
-        run: ./scripts/run_tests.sh
+        run: ./scripts/run_valgrind_tests.sh
