--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,3 @@
-# Template for new C projects
-
 # ******************************************************************************
 # *    App
 # ******************************************************************************
@@ -14,9 +12,11 @@ project('c_lists', 'c',
 
 subdir('src')
 
-c_lists = shared_library('c_lists', sources)
+c_lists = library('c_lists', sources)
 
 # ******************************************************************************
 # *    Tests
 # ******************************************************************************
-subdir('test')
+if get_option('enable_tests')
+  subdir('test')
+endif
