--- a/meson.build
+++ b/meson.build
@@ -5,8 +5,8 @@ project('c_lists', 'c',
          version: '0.0.1',
 	 meson_version: '>=1.0.1',
 	 default_options: [
-            #'werror=false',
-            'c_std=c11'
+            'werror=true',
+            'c_std=c99'
          ]
 )
 
