Add meson option to not compile tests (#5)
* update scripts

* add c99 standard flag

* fix formatting

* Update build.yaml

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,3 @@
-# Template for new C projects
-
 # ******************************************************************************
 # *    App
 # ******************************************************************************
@@ -7,16 +5,18 @@ project('c_lists', 'c',
          version: '0.0.1',
 	 meson_version: '>=1.0.1',
 	 default_options: [
-            #'werror=false',
-            'c_std=c11'
+           'werror=true',
+           'c_std=c99'
          ]
 )
 
 subdir('src')
 
-c_lists = shared_library('c_lists', sources)
+c_lists = library('c_lists', sources)
 
 # ******************************************************************************
 # *    Tests
 # ******************************************************************************
-subdir('test')
+if get_option('enable_tests')
+  subdir('test')
+endif
