save idea for managing proj symbols

--- a/meson.build
+++ b/meson.build
@@ -8,11 +8,15 @@ project('c_lists', 'c',
            'werror=true',
            'c_std=c99'
          ]
-)
+       )
+
+if get_option('enable_tests')
+  add_project_arguments('-DENABLE_TESTS=1', language : 'c')
+endif
 
 subdir('src')
 
-c_lists_lib = library('c_lists', sources, include_directories: c_lists_dir)
+c_lists_lib = library('c_lists', sources, include_directories: c_lists_dir, c_args: '-save-temps')
 
 c_lists_dep = declare_dependency(link_with: c_lists_lib, include_directories: c_lists_dir)
 # ******************************************************************************
