--- a/test/test_ar_list.d/meson.build
+++ b/test/test_ar_list.d/meson.build
@@ -7,7 +7,7 @@ test_file_name = 'test_ar_list_logic.c'
 test_name = 'test_ar_list_logic'
 
 cmock_test_src = files([
-  test_file_name,
+  test_file_name, '..' / 'interfaces.h',
   src / 'ar_list.h', src / 'ar_list.c',
   src / 'l_error.h', src / 'l_error.c',
   utils / 'overflow_utils.h', utils / 'overflow_utils.c',
