--- a/src/meson.build
+++ b/src/meson.build
@@ -1,8 +1,13 @@
 c_lists_dir = include_directories('.')
 
 sources = files(
-   'ar_list.c', 'ar_list.h',
+  'ar_list.c', 'ar_list.h',
+  'interfaces.h',
 )
 
 subdir('utils')
-subdir('interfaces')
+
+if get_option('enable_tests')
+  subdir('interfaces')
+endif
+
