--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,4 @@
-c_lists_dir = include_directories('.')
+c_lists_dir = [include_directories('.')]
 
 sources = files(
   'ar_list.c', 'ar_list.h',
@@ -6,6 +6,7 @@ sources = files(
 )
 
 subdir('utils')
+subdir('common')
 
 if get_option('enable_tests')
   subdir('interfaces')
