--- a/test/meson.build
+++ b/test/meson.build
@@ -3,6 +3,8 @@ cmock_subproject = subproject('cmock')
 unity_dependency = cmock_subproject.get_variable('unity_dep')
 cmock_dependency = cmock_subproject.get_variable('cmock_dep')
 
+tests_dependencies = [unity_dependency, cmock_dependency]
+
 scripts = join_paths('..', 'scripts')
 
 mock_script = find_program(scripts / 'create_mock.rb')
@@ -18,6 +20,8 @@ cmock_gen_mock = generator(
    output: ['mock_@BASENAME@.c', 'mock_@BASENAME@.h', '@PLAINNAME@'],
    arguments: ['@INPUT@', '@BUILD_DIR@'],
 )
+
+interfaces_h = files('interfaces.h')
 
 subdir('test_ar_list.d')
 subdir('test_utils.d')
