--- a/test/test_l_error.d/meson.build
+++ b/test/test_l_error.d/meson.build
@@ -1,17 +1,15 @@
-root = join_paths('..', '..')
-src = join_paths(root, 'src')
-
 test_name = 'test_l_error.c'
 
-cmock_test_src = files([
-  test_name,
-  src / 'l_error.h', src / 'l_error.c',
-])
+test_src = files(test_name) + interfaces_h
+test_objs = c_lists_lib.extract_objects(l_error)
 
 test_l_error_exe = executable('test_l_error',
   sources: [
-   cmock_test_src,
-   cmock_gen_runner.process(test_name),
+    test_src,
+    cmock_gen_runner.process(test_name),
+  ],
+  objects: [
+    test_objs
   ],
   include_directories: [src],
   dependencies: [unity_dependency, cmock_dependency],
