--- a/src/interfaces/meson.build
+++ b/src/interfaces/meson.build
@@ -1,4 +1,9 @@
-sources += files(
-   'std_lib_interface.c', 'std_lib_interface.h',
+std_lib_interface_h = files(
+  'std_lib_interface.h'
 )
-               
+
+sources += files(
+   'std_lib_interface.c', 
+) + std_lib_interface_h             
+
+c_lists_dir += include_directories('.')
