--- a/test/test_ar_list.d/meson.build
+++ b/test/test_ar_list.d/meson.build
@@ -1,26 +1,19 @@
-root = join_paths('..', '..')
-src = join_paths(root, 'src')
-utils = join_paths(src, 'utils')
-interfaces = join_paths(src, 'interfaces')
-
 test_file_name = 'test_ar_list_logic.c'
 test_name = 'test_ar_list_logic'
 
-cmock_test_src = files([
-  test_file_name, '..' / 'interfaces.h',
-  src / 'ar_list.h', src / 'ar_list.c',
-  src / 'l_error.h', src / 'l_error.c',
-  utils / 'overflow_utils.h', utils / 'overflow_utils.c',
-  utils / 'pointers_utils.h', utils / 'pointers_utils.c',
-])
+test_src = files(test_file_name) + interfaces_h
+test_objs = c_lists_lib.extract_all_objects(recursive: true)
 
 test_ar_list_exe = executable(test_name,
   sources: [
-   cmock_test_src,
+   test_src,
    cmock_gen_runner.process(test_file_name),
-   cmock_gen_mock.process( interfaces / 'std_lib_interface.h')
+   cmock_gen_mock.process(std_lib_interface_h)
   ],
-  include_directories: [src, utils, interfaces],
+  objects: [
+    test_objs
+  ],
+  include_directories: [c_lists_dir],
   dependencies: [unity_dependency, cmock_dependency],
   link_args: [
     # allow static functions testing
