--- a/src/meson.build
+++ b/src/meson.build
@@ -2,7 +2,7 @@ c_lists_dir = [include_directories('.')]
 
 sources = files(
   'ar_list.c', 'ar_list.h',
-  'interfaces.h',
+  'cll_interfaces.h',
 )
 
 subdir('utils')
