--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,12 @@
-c_lists_dir = include_directories('.')
+c_lists_dir = [include_directories('.')]
 
 sources = files(
   'ar_list.c', 'ar_list.h',
-  'interfaces.h',
+  'cll_interfaces.h',
 )
 
 subdir('utils')
+subdir('common')
 
 if get_option('enable_tests')
   subdir('interfaces')
