--- a/src/utils/meson.build
+++ b/src/utils/meson.build
@@ -1,4 +1,4 @@
-sources += files(
-  'cll_overflow_utils.c', 'cll_overflow_utils.h',
-  'cll_pointers_utils.c', 'cll_pointers_utils.h',
-)
+overflow_utils = files('cll_overflow_utils.c', 'cll_overflow_utils.h')
+pointers_utils = files('cll_pointers_utils.c', 'cll_pointers_utils.h')
+
+sources += overflow_utils + pointers_utils
