--- a/test/test_utils.d/meson.build
+++ b/test/test_utils.d/meson.build
@@ -1,29 +1,25 @@
-root = join_paths('..', '..')
-src = join_paths(root, 'src')
-utils = join_paths(src, 'utils')
-test_utils = join_paths('..', 'utils')
-
 ################################################
 # TEST OVERFLOW UTILS
 ################################################
-test_overflow_file = 'test_overflow_utils.c'
-test_overflow_name = 'test_overflow_utils'
+test_overflow_utils_file = 'test_overflow_utils.c'
+test_overflow_utils_name = 'test_overflow_utils'
 
-test_overflow_src = files([
-  test_overflow_file,
-  utils / 'cll_overflow_utils.h', utils / 'cll_overflow_utils.c',
-])
+test_overflow_utils_src = files(test_overflow_utils_file)
+test_overflow_utils_objs = c_lists_lib.extract_objects(overflow_utils)
 
-test_overflow_exe = executable(test_overflow_name,
+test_overflow_exe = executable(test_overflow_utils_name,
   sources: [
-   test_overflow_src,
-   cmock_gen_runner.process(test_overflow_file),
+   test_overflow_utils_src,
+   cmock_gen_runner.process(test_overflow_utils_file),
   ],
-  include_directories: [src, utils],
-  dependencies: [unity_dependency, cmock_dependency],
+  objects: [
+   test_overflow_utils_objs,    
+  ],
+  include_directories: tests_include,
+  dependencies: tests_dependencies,
 )
 
-test(test_overflow_name, test_overflow_exe, suite: 'test_utils')
+test(test_overflow_utils_name, test_overflow_exe, suite: 'test_utils')
 
 ################################################
 # TEST POINTERS UTILS
@@ -31,18 +27,19 @@ test(test_overflow_name, test_overflow_exe, suite: 'test_utils')
 test_pointers_utils_file = 'test_pointers_utils.c'
 test_pointers_utils_name = 'test_pointers_utils'
 
-test_pointers_utils_src = files([
-  test_pointers_utils_file,
-  utils / 'cll_pointers_utils.h', utils / 'cll_pointers_utils.c',
-])
+test_pointers_utils_src = files(test_pointers_utils_file)
+test_pointers_utils_objs = c_lists_lib.extract_objects(pointers_utils)
 
 test_pointers_utils_exe = executable(test_pointers_utils_name,
   sources: [
    test_pointers_utils_src,
    cmock_gen_runner.process(test_pointers_utils_file),
   ],
-  include_directories: [src, utils],
-  dependencies: [unity_dependency, cmock_dependency],
+  objects: [
+   test_pointers_utils_objs,    
+  ],
+  include_directories: tests_include,
+  dependencies: tests_dependencies,
 )
 
 test(test_pointers_utils_name, test_pointers_utils_exe, suite: 'test_utils')
