Split src into src and include (#9)
* move public headers to include

--- a/meson.build
+++ b/meson.build
@@ -6,8 +6,8 @@ project('c_lists', 'c',
 	 meson_version: '>=1.0.1',
 	 default_options: [
            'werror=true',
-           'c_std=c99'
-         ]
+           'c_std=c99',
+         ],
        )
 
 if get_option('enable_tests')
@@ -16,10 +16,11 @@ if get_option('enable_tests')
 endif
 
 subdir('src')
+c_lists_include = include_directories('include')
 
-c_lists_lib = library('c_lists', sources, include_directories: c_lists_dir)
+c_lists_lib = library('c_lists', sources, include_directories: c_lists_include)
 
-c_lists_dep = declare_dependency(link_with: c_lists_lib, include_directories: c_lists_dir)
+c_lists_dep = declare_dependency(link_with: c_lists_lib, include_directories: c_lists_include)
 
 # ******************************************************************************
 # *    Tests
