--- a/test/test_ar_list.d/meson.build
+++ b/test/test_ar_list.d/meson.build
@@ -5,7 +5,7 @@ test_file_name = 'test_ar_list_logic.c'
 test_name = 'test_ar_list_logic'
 
 test_src = files(test_file_name) + interfaces_h
-test_objs = c_lists_lib.extract_all_objects(recursive: true)
+test_src += sources
 
 test_ar_list_exe = executable(test_name,
   sources: [
@@ -13,15 +13,15 @@ test_ar_list_exe = executable(test_name,
    cmock_gen_runner.process(test_file_name),
    cmock_gen_mock.process(std_lib_interface_h)
   ],
-  objects: [
-    test_objs
-  ],
   include_directories: tests_include,
   dependencies: tests_dependencies,
   link_args: [
-    # allow static functions testing
     '-zmuldefs',
-  ],         
+  ],
+  c_args: [
+    '-Wno-error=unused-function',
+  ]
+
 )
 
 test(test_name, test_ar_list_exe)
@@ -44,7 +44,6 @@ test_ar_list_exe = executable(test_name,
   include_directories: tests_include,
   dependencies: tests_dependencies,
   link_args: [
-    # allow static functions testing
     '-zmuldefs',
   ],
   c_args: [
