--- a/src/meson.build
+++ b/src/meson.build
@@ -1,12 +1,16 @@
 c_lists_dir = [include_directories('.')]
 
-sources = files(
-  'ar_list.c',
-  'cll_interfaces.h',
+common_sources = files(
+ 'cll_error.c',
+ 'cll_interfaces.h',
 )
 
-subdir('utils')
-subdir('common')
+ar_list_sources = files(
+  'ar_list.c',
+)
+
+sources = common_sources
+sources += ar_list_sources
 
 if get_option('enable_tests')
   subdir('interfaces')
