--- a/src/interfaces/meson.build
+++ b/src/interfaces/meson.build
@@ -2,8 +2,10 @@ std_lib_interface_h = files(
   'cll_std_lib_interface.h'
 )
 
-sources += files(
+interfaces_sources = files(
    'cll_std_lib_interface.c', 
 ) + std_lib_interface_h             
+
+common_sources += interfaces_sources
 
 c_lists_dir += include_directories('.')
