--- a/src/interfaces/meson.build
+++ b/src/interfaces/meson.build
@@ -6,6 +6,7 @@ interfaces_sources = files(
    'cll_std_lib_interface.c', 
 ) + std_lib_interface_h
 
-ar_list_sources += interfaces_sources
+arl_list_sources += interfaces_sources
 
-c_lists_dir += include_directories('.')
+c_lists_include += include_directories('.')
+c_lists_include += include_directories('..')
