--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,12 @@
-c_lists_dir = [include_directories('.')]
-
-ar_list_sources = files(
+# This file will be generated.
+arl_list_file = files(
   'arl_list.c'
 )
 
+arl_list_sources = files()
+
 if get_option('enable_tests')
-  ar_list_sources += files('cll_interfaces.h')
   subdir('interfaces')
 endif
+
 
