--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,3 @@
 option('enable_tests', type: 'boolean', value: true)
-option('arl_prefix', type: 'string', value: 'arl_')
+option('arl_prefix', type: 'string', value: 'arl')
 option('arl_type', type: 'string', value: 'void *')
