--- a/meson.build
+++ b/meson.build
@@ -31,6 +31,8 @@ _arl_list_gen_sources = custom_target('arl_list_generated_sources',
                                       output: [__arl_prefix + 'list.c', __arl_prefix + 'list.h'],
                                       command: [_prefix_script, arl_list_file, __arl_prefix, '@OUTDIR@'])
 
+message(get_option('arl_type'))
+
 arl_lib = library(_arl_prefix,
                   include_directories: c_lists_include,                       
                   sources: [arl_list_sources + _arl_list_gen_sources],
