--- a/examples/create_custom_prefix_meson/meson.build
+++ b/examples/create_custom_prefix_meson/meson.build
@@ -14,28 +14,15 @@ add_project_arguments('-save-temps', language : 'c')
 ###############
 # DEPS
 ###############
-c_lists_int = subproject('c_lists_int',
+c_lists_proj = subproject('c_lists',
                          default_options: [
-#                           'default_library=static',
                                   'enable_tests=false',
-                                  'arl_prefix=int',
-                                  'arl_type=int'
+                                  'arl_prefix=myprefix',
                                 ]
                                )
-
-c_lists_char = subproject('c_lists_char',
-                          default_options: [
-#                                                       'default_library=dynamic',
-                                  'enable_tests=false',
-                                  'arl_prefix=chr',
-                                  'arl_type=char'
-                                ]
-                               )
-
-int_dep = c_lists_int.get_variable('arl_lib_dep')
-char_dep = c_lists_char.get_variable('arl_lib_dep')
+c_lists_dep = c_lists_proj.get_variable('arl_lib_dep')
 
 ###############
 # EXAMPLE
 ###############
-main = executable('main', sources: ['main.c'], dependencies: [int_dep, char_dep])
+main = executable('main', sources: ['main.c'], dependencies: [c_lists_dep])
